@@ -818,6 +818,7 @@ eventHandlers.repeatEscal=Repeat escalation email
 eventHandlers.escalPeriod=Escalate if active for
 eventHandlers.inactiveNotif=Send inactive email
 eventHandlers.inactiveOverride=Override inactive recipients
+eventHandlers.interpolateCommands=Interpolate commands (access event properties)
 eventHandlers.activeCommand=Active process command
 eventHandlers.activeTimeout=Active process timeout (s)
 eventHandlers.inactiveCommand=Inactive process command
